<resources>
    <string name="__empty__" translatable="false"/>
    <string name="app_name" translatable="false">OpenManga</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Loading…</string>
    <string name="loading_error">Loading failed</string>
    <string name="close">Close</string>
    <string name="local_storage">Local storage</string>
    <string name="storages_remote">Remote storages</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="action_search">Search</string>
    <string name="chapters_list">Chapters list</string>
    <string name="action_favourites">Favourites</string>
    <string name="action_favourite">Add to favourites</string>
    <string name="wait">Wait…</string>
    <string name="view_mode_list">List</string>
    <string name="view_mode_grid_large">Large grid</string>
    <string name="view_mode_grid_medium">Medium grid</string>
    <string name="view_mode_grid_small">Small grid</string>
    <string name="action_history">History</string>
    <string name="remove">Remove</string>
    <string name="action_save">Save</string>
    <string name="_continue">Continue</string>
    <string name="search_results">Search results</string>
    <string name="share">Share</string>
    <string name="action_reading_options">Reading options</string>
    <string name="scrolling_direction">Scrolling direction</string>
    <string name="keep_screen">Keep screen on</string>
    <string name="image_saved">Image saved successfully</string>
    <string name="unable_to_save_image">Unable to save image</string>
    <string name="saving_manga">Saving manga</string>
    <string name="preparing">Preparing…</string>
    <string name="completed">Completed</string>
    <string name="cancelling">Cancelling…</string>
    <string name="disclaimer">All manga, characters and logos belong to their respective copyright owners. This app\'s developers not have any affiliation with the content providers.</string>
    <string name="navigate">Go to</string>
    <string name="goto_page" formatted="false">Go to: %d/%d</string>
    <string name="bug_report">Send a bug report</string>
    <string name="bug_report_summ">Send debug log to developer</string>
    <string name="log_not_found">Error log not found!</string>
    <string name="bug_report_message">Sending a bug report you will help the developers. Debug log may contain addresses of some viewed pages.</string>
    <string name="send">Send</string>
    <string name="action_unfavourite">Remove from favourites</string>
    <string name="no_saved_manga">No saved manga on your device</string>
    <string name="no_manga_found">No manga found</string>
    <string name="history_empty">History is empty</string>
    <string name="no_favourites">No favourites</string>
    <string name="help">Help</string>
    <string name="action_clear_cache">Clear image cache</string>
    <string name="cache_clearing">Clearing cache…</string>
    <string name="cache_size" formatted="false">Cache size: %.1f Mb</string>
    <string name="size_calculating">Calculating size…</string>
    <string name="clear_history">Clear history</string>
    <string name="history_will_cleared">History will be erased</string>
    <string name="file_not_found">File not found</string>
    <string name="error">An error has occurred</string>
    <string name="action_clear_search_hist">Clear search history</string>
    <string name="about">About</string>
    <string name="version" formatted="false">Version: %s</string>
    <string name="sort_updated">Updated</string>
    <string name="sort_popular">Popular</string>
    <string name="sort_latest">Latest</string>
    <string name="action_sort">Sort order</string>
    <string name="sort_rating">By rating</string>
    <string name="genre_all">All</string>
    <string name="action_genre">Genres</string>
    <string name="genre_art">Art</string>
    <string name="genre_action">Action</string>
    <string name="genre_martialarts">Martial arts</string>
    <string name="genre_vampires">Vampires</string>
    <string name="genre_harem">Harem</string>
    <string name="genre_mystery">Mystery</string>
    <string name="genre_shoujo">Shoujo</string>
    <string name="genre_shounen">Shounen</string>
    <string name="genre_horror">Horror</string>
    <string name="genre_ecchi">Ecchi</string>
    <string name="genre_school">School</string>
    <string name="genre_romance">Romance</string>
    <string name="genre_adventure">Adventure</string>
    <string name="genre_comedy">Comedy</string>
    <string name="genre_youkai">Youkai</string>
    <string name="genre_genderch">Gender change</string>
    <string name="genre_seinen">Seinen</string>
    <string name="genre_yaoi">Yaoi</string>
    <string name="genre_doujinshi">Doujinshi</string>
    <string name="genre_manga">Manga</string>
    <string name="genre_artistcg">Artist CG</string>
    <string name="genre_gamecg">Game CG</string>
    <string name="genre_western">Western</string>
    <string name="genre_nonh">Non-H</string>
    <string name="genre_imageset">Image set</string>
    <string name="genre_misc">Misc</string>
    <string name="genre_asianporn">Asian porn</string>
    <string name="genre_cosplay">Cosplay</string>
    <string name="sort_random">Random</string>
    <string name="scroll_by_volkeys">Scroll by volume keys</string>
    <string name="chapters_to_save">Save manga</string>
    <string name="no_chapters_found">No chapters found</string>
    <string name="genre_yuri">Yuri</string>
    <string name="genre_fantasy">Fantasy</string>
    <string name="genre_fantastic">Fantastic</string>
    <string name="genre_supernatural">Supernatural</string>
    <string name="genre_military">Military</string>
    <string name="genre_magic">Magic</string>
    <string name="genre_sfiction">Science fiction</string>
    <string name="genre_drama">Drama</string>
    <string name="genre_daily">Daily</string>
    <string name="no_new_chapters">No new chapters</string>
    <string name="check_new_chapters">Check for new chapters</string>
    <string name="new_chapters">New chapters are available</string>
    <string name="checking_new_chapters">Checking for new chapters</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="checking_frequency">Frequency of checking</string>
    <string name="retry">Retry</string>
    <string name="manga_local_dir">Local manga\'s directory</string>
    <string name="dir_no_access">No write access to this directory</string>
    <string name="downloads_queue">Downloads</string>
    <string name="no_downloads">No queued downloads</string>
    <string name="queue">In queue</string>
    <string name="new_chapters_count" formatted="false">New chapters: %d</string>
    <string name="manga_updates">Updated manga</string>
    <string name="over_wifi_only">Over WiFi only</string>
    <string name="mark_all_viewed">Mark all as viewed</string>
    <string name="mark_all_viewed_confirm">Mark all updated mangas as viewed?</string>
    <string name="send_mail">Send email</string>
    <string name="welcome">Welcome</string>
    <string name="show_at_startup">Show at startup</string>
    <string name="search_on_another_sources">Search on another sources</string>
    <string name="genre_hero_fantasy">Heroic fantasy</string>
    <string name="genre_detective">Detective</string>
    <string name="genre_game">Game</string>
    <string name="genre_historical">Historical</string>
    <string name="genre_codomo">Codomo</string>
    <string name="maho_shoujo">Maho-Shoujo</string>
    <string name="genre_mecha">Mecha</string>
    <string name="genre_sci_fi">Science fiction</string>
    <string name="genre_natural">Natural</string>
    <string name="genre_postapocalipse">Postapocalipse</string>
    <string name="genre_shoujo_ai">Shoujo-ai</string>
    <string name="genre_shounen_ai">Shounen-ai</string>
    <string name="genre_thriller">Thriller</string>
    <string name="genre_genderbender">Gender bender</string>
    <string name="genre_josei">Josei</string>
    <string name="genre_music">Music</string>
    <string name="genre_psychological">Psychological</string>
    <string name="genre_samurai">Samurai</string>
    <string name="genre_tragedy">Tragedy</string>
    <string name="genre_sports">Sports</string>
    <string name="genre_bara">Bara</string>
    <string name="genre_cyberpunk">Cyberpunk</string>
    <string name="genre_erotica">Erotica</string>
    <string name="backup">Backup data</string>
    <string name="backup_done">Backup completed</string>
    <string name="restore">Restore data</string>
    <string name="restore_done">Data was successfully restored</string>
    <string name="done">Done</string>
    <string name="data">Data</string>
    <string name="select_backup">Select backup</string>
    <string name="import_file">Import</string>
    <string name="export_file">Export</string>
    <string name="open_on_start">Open on start</string>
    <string name="view_mode">View mode</string>
    <string name="favourites_categories_default">Reading now, Read later</string>
    <string name="favourites_categories">Favourites categories</string>
    <string name="favourites_categories_description">Enter splitted by \',\'</string>
    <string name="adjust_brightness">Adjust brightness</string>
    <string name="brightness_value">Brightness value</string>
    <string name="check_updates">Check for updates</string>
    <string name="check_updates_auto">Automatic check for updates</string>
    <string name="action_save_add">Save missing chapters</string>
    <string name="theme">Theme</string>
    <string name="show_resume_fab">Show floating \"Continue\" button</string>
    <string name="scale_mode">Scale mode</string>
    <string name="move_saved">Move saved manga</string>
    <string name="max_cache_size">Max. cache size</string>
    <string name="app_language">Application language</string>
    <string name="hide_toolbar">Hide toolbar when scroll</string>
    <string name="mode">Mode</string>
    <string name="preloading">Preload pages</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="recommendations_options">Recommendations options</string>
    <string name="check_credentials">Check credentials</string>
    <string name="scroll_by_click">Scroll by click on sides</string>
    <string name="use_tor_proxy">Use Tor proxy</string>
    <string name="use_tor_summary">Redirect all network data via Tor network using Orbot</string>
    <string name="action_shortcut">Create shortcut</string>
    <string name="sync">Synchronization</string>
    <string name="start_sync">Start synchronization now</string>
    <string name="synchronize_history">Synchronize history</string>
    <string name="synchronize_favourites">Synchronize favourites</string>
    <string name="sync_frequency">Sync frequency</string>
    <string name="logout">Logout</string>
    <string name="action_export">Export</string>
    <string name="appearance">Appearance</string>
    <string name="system">System</string>
    <string name="storage_settings">Local storage</string>
    <string name="more_">More…</string>
    <string name="manga_catalogues">Mangas catalogues</string>
    <string name="network_settings">Network</string>
    <string name="download_wifi_only">Download manga only over WiFi</string>
    <string name="reverse_order">Reverse chapters</string>
    <string name="action_relative">Relative</string>
    <string name="open_in_">Open in…</string>
    <string name="domain">Domain</string>
    <string name="authorization">Authorization</string>
	<string name="add_to_homescreen">Add to homescreen</string>
    <string name="find_similar">Find similar</string>
	<string name="save_">Save…</string>
    <string name="share_image">Share image</string>
</resources>