<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:defaultValue="-4"
        android:entries="@array/section_names"
        android:entryValues="@array/sections"
        android:key="defsection"
        android:title="@string/open_on_start" />
    <Preference
        android:key="srcselect"
        android:title="@string/select_sources" />
    <Preference
        android:key="readeropt"
        android:title="@string/action_reading_options" />
    <Preference
        android:key="chupd"
        android:title="@string/checking_new_chapters">
        <intent android:action="org.nv95.openmanga.chupd" />
    </Preference>
    <Preference
        android:key="recommendations"
        android:title="@string/recommendations_options" />
    <EditTextPreference
        android:key="fav.categories"
        android:title="@string/favourites_categories"
        android:dialogMessage="@string/favourites_categories_description"
        android:defaultValue="@string/favourites_categories_default" />
    <Preference
        android:key="mal"
        android:title="@string/mal">
        <intent android:action="org.nv95.openmanga.mal" />
    </Preference>
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/themes_names"
        android:entryValues="@array/themes"
        android:key="theme"
        android:title="@string/theme" />
    <!--suppress AndroidDomInspection -->
    <ListPreference
        android:defaultValue=""
        android:entries="@array/app_languages"
        android:entryValues="@array/app_languages_values"
        android:key="lang"
        android:title="@string/app_language" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="hide_toolbars"
        android:title="@string/hide_toolbar"
        android:widgetLayout="@layout/pref_switchcompat" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="fab"
        android:title="@string/show_resume_fab"
        android:widgetLayout="@layout/pref_switchcompat" />
    <PreferenceCategory android:title="@string/data">
        <Preference
            android:key="mangadir"
            android:title="@string/manga_local_dir" />
        <Preference
            android:key="movemanga"
            android:title="@string/move_saved" />
        <Preference
            android:key="csearchhist"
            android:title="@string/action_clear_search_hist" />
        <Preference
            android:key="ccache"
            android:title="@string/action_clear_cache" />
        <EditTextPreference
            android:key="maxcache"
            android:title="@string/max_cache_size"
            android:inputType="numberDecimal"
            android:defaultValue="100" />
        <Preference
            android:key="backup"
            android:title="@string/backup" />
        <Preference
            android:key="restore"
            android:title="@string/restore" />
    </PreferenceCategory>
    <PreferenceCategory android:key="cat_help" android:title="@string/help">
        <Preference
            android:key="about"
            android:title="@string/about" />
        <Preference
            android:key="update"
            android:title="@string/check_updates" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="autoupdate"
            android:title="@string/check_updates_auto" />
        <Preference
            android:key="bugreport"
            android:summary="@string/bug_report_summ"
            android:title="@string/bug_report" />
    </PreferenceCategory>
</PreferenceScreen>