<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="-4"
        android:entries="@array/section_names"
        android:entryValues="@array/sections"
        android:key="defsection"
        android:title="@string/open_on_start" />

    <Preference
        android:key="header.appearance"
        android:title="@string/appearance" />

    <Preference
        android:key="header.sources"
        android:title="@string/manga_catalogues" />

    <Preference
        android:key="header.reader"
        android:title="@string/action_reading_options" />

    <Preference
        android:key="header.chupd"
        android:title="@string/checking_new_chapters" />

    <Preference
        android:key="header.sync"
        android:title="@string/sync" />

    <Preference
        android:key="header.other"
        android:title="@string/more_" />


<!--<Preference
        android:key="header.storage"
        android:title="@string/storage_settings" />

    <Preference
        android:key="header.system"
        android:title="@string/system" />

    -->
</PreferenceScreen>