<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	<item
		android:id="@+id/action_reverse"
		android:title="@string/reverse_order"
		android:visible="true"
		android:checkable="true"
		app:showAsAction="never" />
	<item
		android:id="@+id/action_save"
		android:title="@string/save_"
		app:showAsAction="never"/>
	<item
		android:id="@+id/action_share"
		android:title="@string/share"
		app:showAsAction="never" />
	<item
		android:id="@+id/action_shortcut"
		android:title="@string/add_to_homescreen"
		app:showAsAction="never" />
	<item
		android:id="@+id/action_open_ext"
		android:title="@string/open_in_"
		app:showAsAction="never">
		<menu />
	</item>
	<item
		android:id="@+id/action_relative"
		android:title="@string/find_similar"
		app:showAsAction="never" />
</menu>