<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:defaultValue="hentai-chan.me"
        android:key="domain"
        android:title="@string/domain" />
    <PreferenceCategory android:title="@string/authorization">
        <EditTextPreference
            android:defaultValue="@string/__empty__"
            android:key="login"
            android:title="@string/login" />
        <EditTextPreference
            android:defaultValue="@string/__empty__"
            android:dependency="login"
            android:inputType="textPassword"
            android:key="password"
            android:title="@string/password" />
        <Preference
            android:dependency="password"
            android:key="auth_test"
            android:title="@string/check_credentials" />
    </PreferenceCategory>
</PreferenceScreen>