<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="12"
        android:entries="@array/sync_intervals"
        android:entryValues="@array/sync_intervals_hours"
        android:key="sync.interval"
        android:title="@string/sync_frequency" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="sync.wifionly"
        android:title="@string/over_wifi_only"
        android:widgetLayout="@layout/pref_switchcompat" />

    <Preference
        android:key="sync.start"
        android:title="@string/start_sync" />

    <Preference
        android:key="sync.username"
        android:title="@string/logout" />

    <PreferenceCategory android:title="@string/data">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="sync.history"
            android:title="@string/synchronize_history"
            android:widgetLayout="@layout/pref_switchcompat" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="sync.favourites"
            android:title="@string/synchronize_favourites"
            android:widgetLayout="@layout/pref_switchcompat" />

    </PreferenceCategory>

</PreferenceScreen>