<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/group_all" android:visible="false">
    
        <item
            android:id="@+id/action_favourite"
            android:orderInCategory="100"
            android:title="@string/action_favourite"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_save"
            android:orderInCategory="100"
            android:title="@string/action_save"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_save_more"
            android:orderInCategory="100"
            android:title="@string/action_save_add"
            android:visible="false"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_sort"
            android:orderInCategory="100"
            android:title="@string/reverse_order"
            android:visible="true"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_remove"
            android:orderInCategory="100"
            android:title="@string/action_remove"
            android:visible="false"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_share"
            android:orderInCategory="100"
            android:title="@string/action_share"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_shortcut"
            android:orderInCategory="100"
            android:title="@string/action_shortcut"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_open_ext"
            android:orderInCategory="100"
            android:title="@string/open_in_"
            app:showAsAction="never" >
            <menu />
        </item>
        <item
            android:id="@+id/action_relative"
            android:orderInCategory="100"
            android:title="@string/action_relative"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_export"
            android:orderInCategory="100"
            android:title="@string/action_export"
            app:showAsAction="never" />
        
    </group>
</menu>