<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group_navigate">
        <item
            android:id="@+id/action_chapters"
            android:icon="@drawable/ic_action_list_plus"
            android:title="@string/chapters_list" />
        <item
            android:id="@+id/action_goto"
            android:icon="@drawable/ic_editor_wrap_text"
            android:title="@string/navigate" />
    </group>
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_action_save"
        android:title="@string/action_save" />
    <item
        android:id="@+id/action_favourite"
        android:icon="@drawable/ic_action_action_favorite_outline"
        android:title="@string/action_favourite" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_action_social_share"
        android:title="@string/action_share" />
    <group android:id="@+id/group_image">
        <item
            android:id="@+id/action_img_share"
            android:icon="@drawable/ic_action_social_share"
            android:title="@string/share_image" />
        <item
            android:id="@+id/action_img_save"
            android:icon="@drawable/ic_action_save"
            android:title="@string/save_to_gallery" />
    </group>
    <item
        android:id="@+id/action_readprefs"
        android:icon="@drawable/ic_action_action_settings"
        android:title="@string/action_reading_options" />
</menu>