<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_listmode"
        android:orderInCategory="100"
        android:title="@string/view_mode"
        app:showAsAction="never" />
    <group android:id="@+id/group_history">
        <item
            android:id="@+id/action_histclear"
            android:orderInCategory="100"
            android:title="@string/action_histclear"
            app:showAsAction="never" />
    </group>
    <group android:id="@+id/group_favourites">
        <item
            android:id="@+id/action_updates"
            android:orderInCategory="100"
            android:title="@string/check_new_chapters"
            app:showAsAction="never" />
    </group>
    <item
        android:id="@+id/action_genre"
        android:orderInCategory="100"
        android:title="@string/action_genre"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort"
        android:orderInCategory="100"
        android:title="@string/action_sort"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
